# yarn-spire

./: Cargo.toml  build_and_move_to_tests_debug.bat  build_and_move_to_tests_release.bat
codegen/: Cargo.toml
codegen/src/: config.rs  io.rs  lib.rs  main.rs
codegen/src/expressions/: built_in_calls.rs  custom_parser.rs  declaration_ty.rs  mod.rs  yarn_expr.rs  yarn_lit.rs  yarn_ops.rs
codegen/src/expressions/tests/: mod.rs  test_binary.rs  test_english_operators.rs  test_function_call.rs  test_literals.rs  test_resolve.rs  test_unary.rs  test_var_get.rs
codegen/src/io/: read.rs
codegen/src/io/write/: core_types.rs  mod.rs  nodes.rs  template.rs  util.rs
codegen/src/lines/: macros.rs  mod.rs  util.rs
codegen/src/lines/grouping/: choices.rs  if_branch.rs  mod.rs  quoted.rs
codegen/src/lines/grouping/scope/: mod.rs  tests.rs
codegen/src/lines/raw/: mod.rs  node_metadata.rs  splitting.rs  tests.rs
codegen/src/lines/raw/branches/: choices.rs  if_statement.rs  mod.rs  tests.rs
codegen/src/lines/raw/command/: mod.rs  tests.rs
codegen/src/lines/raw/speech/: mod.rs  tests.rs
codegen/src/parsing/: macros.rs  mod.rs  util.rs
codegen/src/parsing/grouping/: if_branch.rs  mod.rs  options.rs  quoted.rs
codegen/src/parsing/grouping/scope/: mod.rs  tests.rs
codegen/src/parsing/raw/: mod.rs  node_metadata.rs  splitting.rs  tests.rs  var_declaration.rs
codegen/src/parsing/raw/arg_parser/: mod.rs  tests.rs
codegen/src/parsing/raw/branches/: choices.rs  if_statement.rs  mod.rs  options.rs  tests.rs  tests_if.rs  tests_options.rs
codegen/src/parsing/raw/command/: mod.rs  tests.rs
codegen/src/parsing/raw/speech/: mod.rs  tests.rs
codegen/src/quoting/: helper.rs  mod.rs  util.rs
codegen/src/quoting/core_types/: built_in_functions.rs  command_line.rs  default_storage.rs  instruction.rs  mod.rs  options.rs  runtime.rs  speech.rs  title.rs  var_trait.rs
codegen/src/quoting/core_types/nodes/: mod.rs  title.rs
codegen/src/quoting/core_types/nodes/enums/: any.rs  command.rs  option_line.rs  options_fork.rs  speech.rs
codegen/src/quoting/quotable_types/: advance.rs  enums.rs  line_ids.rs  mod.rs  next.rs  node.rs  scope.rs
codegen/src/quoting/template/: command_line.rs  default_storage.rs  mod.rs  options.rs  runtime.rs  speech.rs  title.rs  var_trait.rs
codegen/src/quoting/template/nodes/: mod.rs  title.rs
codegen/src/quoting/template/nodes/enums/: any.rs  command.rs  mod.rs  option_line.rs  options_fork.rs  speech.rs
concept/: Cargo.toml
concept/src/: built_in_functions.rs  choice_option.rs  command_line.rs  instruction.rs  lib.rs  line.rs  options.rs  runtime.rs  speech.rs  storage.rs  title.rs  var_trait.rs
concept/src/nodes/: ch01_awakening.rs  ch01_awakening_command.rs  ch01_awakening_option_line.rs  ch01_awakening_options_fork.rs  ch01_awakening_speech.rs  concept_script.yarn  mod.rs
concept/src/stashed/: node.rs  rewind.rs  tests.rs  traits.rs
concept/src/stashed/compass/: choices.rs  mod.rs  speech.rs
yarn_spire/: Cargo.toml
yarn_spire/src/: default_storage.rs  end_reason.rs  instruction.rs  lib.rs  node.rs  serialization.rs
yarn_spire/src/compass/: command.rs
