[workspace]

[package]
name = "concept"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
houtamelo_utils = "1.2"
thiserror = "1.0"
enum_dispatch = "0.3"
strum = { version = "0.26", features = ["derive"] }
rand = { version = "0.8", features = ["std", "getrandom", "std_rng"], optional = true }
rand_xoshiro = { version = "0.6", features = ["serde1"], optional = true }

[features]
default = ["rand", "rand_xoshiro"]