[workspace]

[package]
name = "concept"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
houtamelo_utils = "3.0"
thiserror = "1.0"
strum = { version = "0.26", features = ["derive"] }
rand = { version = "0.8.5", features = ["std", "getrandom", "std_rng"], optional = true }
rand_xoshiro = { version = "0.6.0", features = ["serde1"], optional = true }
declarative_type_state = "0.5"

[features]
default = ["rand", "rand_xoshiro"]