[package]
name = "yarn_spire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corosensei = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
houtamelo_utils = "1.2"
yarn_spire_codegen = { path = "../codegen"}
thiserror = "1.0"

